# regulatoryWatcher

./: .dockerignore  .gitattributes  .gitignore  APP_SUMMARY.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  _todo.txt  config.example.yaml  docker-compose.yml  docker-entrypoint.sh  initialPrompt.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 311852e10862_initial_schema.py
regwatch/: __init__.py  cli.py  config.py  main.py
regwatch/analysis/: extractor.py  fields.py  progress.py  runner.py  startup.py  writeback.py
regwatch/db/: admin.py  engine.py  entity_type_seed.py  extraction_field_seed.py  migrations.py  models.py  schema_sync.py  seed.py  virtual_tables.py
regwatch/discovery/: cssf_scraper.py  heuristics.py  progress.py
regwatch/domain/: types.py
regwatch/llm/: client.py  json_parser.py  model_selection.py
regwatch/ollama/: client.py
regwatch/pipeline/: diff.py  hashing.py  persist.py  pipeline_factory.py  progress.py  run_helpers.py  runner.py  sources.py
regwatch/rag/: answer.py  chat_service.py  chunker.py  indexing.py  retrieval.py
regwatch/scheduler/: jobs.py
regwatch/services/: analysis.py  chat.py  cssf_discovery.py  deadlines.py  discovery.py  discovery_runner.py  document_fetch.py  entity_types.py  extraction_fields.py  inbox.py  regulations.py  runtime_limits.py  settings.py  sidebar_badges.py  updates.py  upload.py
regwatch/web/: templates_context.py
scripts/: capture_cssf_fixtures.py
seeds/: regulations_seed.yaml
tests/: conftest.py
tests/fixtures/: cssf_circular_page.html  cssf_consultation_sample.xml  (+8 more)
(+237 files in other folders)
